Changes to support updated JDK